--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Chromium 环境 win、mac、linux
+chrome/chrome-win/
+
 # Editor directories and files
 .idea
 .vscode
