--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "koa": "^2.7.0",
     "puppeteer": "^1.19.0",
     "puppeteer-core": "^1.19.0"
   }
